--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,5 +1,8 @@
 name: Playwright Tests
 on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 */2 * * 1-5'
   push:
     branches: [ main, master ]
   pull_request:
