--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,7 +2,7 @@ name: Playwright Tests
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */2 * * 1-5'
+    - cron: '10 * * * 1-5'
   push:
     branches: [ main, master ]
   pull_request:
